tests/build/property_macro/fail/method_cannot_be_property.stderr
error: methods cannot be property functions
 --> $DIR/method_cannot_be_property.rs:6:25
  |
6 |     pub fn self_method1(self) -> ! { }
  |                         ^^^^

error: methods cannot be property functions
 --> $DIR/method_cannot_be_property.rs:9:25
  |
9 |     pub fn self_method2(self, input: bool) -> impl UiNode {
  |                         ^^^^

error: methods cannot be property functions
  --> $DIR/method_cannot_be_property.rs:14:25
   |
14 |     pub fn self_method3(self: Box<Self>, input: bool) -> impl UiNode {
   |                         ^^^^
